docmd-main/v10/zh/release-notes/0-9-3.md
---
title: "v0.9.3 发行说明"
description: "docmd v0.9.3 发行说明 - 离线与隔离环境 Mermaid 图表 (#198)、OpenAPI 响应示例 (#199, #200) 与 Schema 容器滚动、强大的 AI 助手多格式工具解析器 (#206)、解析器 URL 安全修复 (#202, #203) 与 CI 验证流水线稳定化 (#205)。"
date: "2026-08-18"
---

### 亮点

`docmd` v0.9.3 带来了完全离线的 Mermaid 图表打包（[Issue #198](https://github.com/docmd-io/docmd/issues/198)）、OpenAPI 请求/响应示例与 Schema 布局横向隔离滚动（[Issue #199](https://github.com/docmd-io/docmd/issues/199), [PR #200](https://github.com/docmd-io/docmd/pull/200)）、基于 `docmd-assistant` v0.1.14 的通用 AI 助手工具调用解析（[Issue #206](https://github.com/docmd-io/docmd/issues/206)）、URL 安全清理的稳定性增强（[PR #203](https://github.com/docmd-io/docmd/pull/203)）以及 CI 流水线验证稳定性提升（[Issue #205](https://github.com/docmd-io/docmd/issues/205)）。

### 离线与隔离环境 Mermaid 图表 (`@docmd/plugin-mermaid`)

- **本地独立打包 ([Issue #198](https://github.com/docmd-io/docmd/issues/198))**：Mermaid 插件现在使用 `esbuild` 将完整的 Mermaid 运行时本地打包为经典的 IIFE 脚本，完全移除了运行时的 CDN 依赖（`jsdelivr.net`）。
- **隔离网络与 `file://` 兼容**：图表现在可在完全离线、无外网隔离环境以及通过 `file://` 协议直接在浏览器中打开编译后的文档时流畅渲染，且不会触发浏览器 CORS 跨域策略拦截。

### OpenAPI 插件增强 (`@docmd/plugin-openapi`)

- **示例与媒体类型 ([Issue #199](https://github.com/docmd-io/docmd/issues/199), [PR #200](https://github.com/docmd-io/docmd/pull/200))**：全面支持 OpenAPI 3.x 请求体示例、响应示例以及多 Schema 示例数据块，由 [@w666](https://github.com/w666) 贡献。
- **Schema 表格容器与横向隔离滚动**：
  - 参数与 Schema 表格被包裹在 `.oa-table-wrap` 容器中，具备独立的 `overflow-x: auto` 滚动。
  - 展开复杂的嵌套 Schema 表格不再导致全页面水平拉伸或视图失真。
  - 请求方法标识、接口路径、摘要与描述保持固定位置且具备自动换行能力。

### AI 助手插件与引擎 (`@docmd/plugin-ai` & `docmd-assistant` v0.1.14)

- **通用多格式工具解析器 ([Issue #206](https://github.com/docmd-io/docmd/issues/206))**：升级 `docmd-assistant`，支持提取平衡 JSON 对象、Markdown 代码块（` ```json `）、括号语法（`[Tool Call: name(...)]`）以及无参数调用（`get_site_structure()`）。
- **零底层字符串泄露**：确保工具调用原始文本绝不泄露到聊天界面中；工具在后台自主执行并合成为自然流畅的 Markdown 解答。
- **经典脚本执行**：客户端静态资源编译为经典 IIFE 脚本，确保离线 `file://` 浏览兼容性。

### 解析器与核心修复 (`@docmd/parser` & `@docmd/core`)

- **URL 清理 ([PR #203](https://github.com/docmd-io/docmd/pull/203))**：修复了 `sanitizeUrl` 中前导 `//` 协议相对路径的折叠问题，避免子站点链接异常，由 [@eeshsaxena](https://github.com/eeshsaxena) 贡献。
- **CI 验证流水线稳定化 ([Issue #205](https://github.com/docmd-io/docmd/issues/205))**：修复了项目切换器 URL 契约测试中断言不稳定的问题，并在 Bug 反馈模板中增加了包括 Firefox 在内的跨平台浏览器选项。
- **Service Worker 协议防护**：增加了协议检查，确保在 `file://` 协议下跳过 Service Worker 注册查询，避免产生安全异常。

### 已解决的 Issue 与 Pull Request

- **[Issue #198](https://github.com/docmd-io/docmd/issues/198)**：允许在隔离环境和离线模式下使用 Mermaid 插件（由 [@cboitel](https://github.com/cboitel) 反馈）。
- **[Issue #199](https://github.com/docmd-io/docmd/issues/199)** / **[PR #200](https://github.com/docmd-io/docmd/pull/200)**：在 OpenAPI 插件中增加对 Examples 的支持（由 [@w666](https://github.com/w666) 贡献）。
- **[PR #203](https://github.com/docmd-io/docmd/pull/203)**：修复 `sanitizeUrl` 中的前导 `//` 折叠（由 [@eeshsaxena](https://github.com/eeshsaxena) 贡献）。
- **[Issue #205](https://github.com/docmd-io/docmd/issues/205)**：不稳定的 CI 验证流水线（由 [@w666](https://github.com/w666) 反馈）。
- **[Issue #206](https://github.com/docmd-io/docmd/issues/206)**：AI 聊天返回工具调用原始字符串而非真实回答（由 [@mewc](https://github.com/mewc) 反馈）。

### 全球多语言文档同步

- **多语言一致性**：在英语 (`en`)、德语 (`de`)、西班牙语 (`es`) 和中文 (`zh`) 之间实现了所有发行说明与插件指南的完全同步。
